--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,35 +1,21 @@
-# This is an example Starter pipeline configuration
-# Use a skeleton to build, test and deploy using manual and parallel steps
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-
-image: atlassian/default-image:3
+image: python:3.10
 
 pipelines:
-  default:
-    - parallel:
+  branches:
+    dev:
       - step:
-          name: 'Build and Test'
+          name: Запуск Selenium-теста
+          services:
+            - headless
+          caches:
+            - pip
           script:
-            - echo "Your build and test goes here..."
-      - step:
-          name: 'Lint'
-          script:
-            - echo "Your linting goes here..."
-      - step:
-          name: 'Security scan'
-          script:
-            - echo "Your security scan goes here..."
+            - pip install -r requirements.txt
+            - pytest -v --junitxml=test-reports/report.xml --html=test-reports/report.html
+          artifacts:
+            - test-reports/**
 
-    # The following deployment steps will be executed for each pipeline run. To configure your steps and conditionally deploy see https://support.atlassian.com/bitbucket-cloud/docs/configure-bitbucket-pipelinesyml/
-    - step:
-        name: 'Deployment to Staging'
-        deployment: staging
-        script:
-          - echo "Your deployment to staging script goes here..."
-    - step:
-        name: 'Deployment to Production'
-        deployment: production
-        trigger: 'manual'
-        script:
-          - echo "Your deployment to production script goes here..."
+definitions:
+  services:
+    headless:
+      image: browserless/chrome:latest
